[package]
name = "delf"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-try-from-primitive = "1"
derive_more = "0.99"
nom = "5.1.2"
enumflags2 = "0.6"
mmap = "0.1"
thiserror = "1"
serde = "1.0.130"
serde_derive = "1.0.130"
carpenter = {path = "../../carpenter"}
